Fix paddings, etc. on mobile footer.

--- a/source/scss/_application.scss
+++ b/source/scss/_application.scss
@@ -85,7 +85,7 @@ textarea
 
 #wrapper
 {
-    padding-bottom: 90px;
+    padding-bottom: 100px;
     position: absolute;
     width: 100%;
 
@@ -873,19 +873,21 @@ Quotes
     overflow: hidden;
 
     ul li {
-        font-size: 18px;
+        font-size: 1rem;
+
         margin: 0 auto;
-        margin-top: 25px;
+        margin-top: 1.5625rem;
         text-align: center;
 
         @media only screen and (min-width: 500px) {
-            margin-top: 60px;
+            font-size: 1.125rem;
+            margin-top: 3.75rem;
         }
 
         p {
             color: #fff;
-            font-size: 22px;
-            margin-bottom: 8px;
+            font-size: 1.2222em;
+            margin-bottom: 0.4444em;
             text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
         }
 
@@ -960,10 +962,14 @@ nav#secondary
 
     ul {
         clear: left;
+        margin-left: -0.25em;
+        margin-right: -0.25em;
         margin-top: 0.6em;
 
         @media only screen and (min-width: 500px) {
             clear: none;
+            margin-left: inherit;
+            margin-right: inherit;
             float: right;
         }
 
@@ -979,26 +985,31 @@ nav#secondary
                 clear: left;
             }
 
-            @media only screen and (min-width: 750px) {
-                padding: 15px 0 20px 0;
-
-                &:nth-of-type(4) {
-                    clear: none;
-                }
-            }
-
             a {
                 color: #aaa;
+                display: block;
                 font-size: 11px;
                 font-weight: 600;
                 letter-spacing: 1px;
-                padding: 0 15px 0 0;
+                padding: 2px 5px;
                 text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
                 text-transform: uppercase;
             }
 
             &.current-item a, a:hover {
                 color: #f4645f;
+            }
+
+            @media only screen and (min-width: 750px) {
+                padding: 15px 0 20px 0;
+
+                &:nth-of-type(4) {
+                    clear: none;
+                }
+
+                a {
+                    padding: 0 15px 0 0;
+                }
             }
         }
     }
@@ -1022,7 +1033,7 @@ Copyright
     color: #555555;
     font-size: 11px;
     font-weight: 600;
-    letter-spacing: 1px;
+    line-height: 1.5;
     padding: 25px 0;
     position: fixed;
     text-transform: uppercase;
@@ -1035,6 +1046,11 @@ Copyright
         &:hover {
             color: #999;
         }
+    }
+
+    @media only screen and (min-width: 500px) {
+        letter-spacing: 1px;
+        line-height: inherit;
     }
 }
 /*
